5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4171/executions/1807_2572.log
== TEST (2019-06-09 18:41:26) 
-- CODE:
from numpy import *

mat = array(eval(input("")))

par = 0
impar = 0

for i in range(size(mat)):
	if mat[i] % 2 == 0:
		par += 1
	else:
		impar += 1

g1 = zeros(par, dtype = int)
g2 = zeros(impar, dtype = int)

for k in rage (size(mat)):
	if mat[k] % 2 == 0:
		g1[k] += mat[k]
	else:
		g2[k] += mat[k]
		
print(g2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:41:37) 
-- CODE:
from numpy import *

mat = array(eval(input("")))

par = 0
impar = 0

for i in range(size(mat)):
	if mat[i] % 2 == 0:
		par += 1
	else:
		impar += 1

g1 = zeros(par, dtype = int)
g2 = zeros(impar, dtype = int)

for k in range(size(mat)):
	if mat[k] % 2 == 0:
		g1[k] += mat[k]
	else:
		g2[k] += mat[k]
		
print(g2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 18:41:58) 
-- CODE:
from numpy import *

mat = array(eval(input("")))

par = 0
impar = 0

for i in range(size(mat)):
	if mat[i] % 2 == 0:
		par += 1
	else:
		impar += 1

g1 = zeros(par, dtype = int)
g2 = zeros(impar, dtype = int)

for k in range(size(mat)):
	if mat[k] % 2 == 0:
		g1[k] += mat[k]
		
print(g2)
-- EXECUTION TIME:
1.04862
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2572/main.py", line 19, in <module>
    g1[k] += mat[k]
IndexError: index 4 is out of bounds for axis 0 with size 3

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:41:58) 
-- CODE:
from numpy import *

mat = array(eval(input("")))

par = 0
impar = 0

for i in range(size(mat)):
	if mat[i] % 2 == 0:
		par += 1
	else:
		impar += 1

g1 = zeros(par, dtype = int)
g2 = zeros(impar, dtype = int)

for k in range(size(mat)):
	if mat[k] % 2 == 0:
		g1[k] += mat[k]
		
print(g2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:43:20) 
-- CODE:
from numpy import *

mat = array(eval(input("")))

par = 0
impar = 0

for i in range(size(mat)):
	if mat[i] % 2 == 0:
		par += 1
	else:
		impar += 1

g1 = zeros(par, dtype = int)
g2 = zeros(impar, dtype = int)

for k in range(size(mat)):
	if mat[k] % 2 == 0:
		g1[k] = mat[k]
		
print(g2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:43:44) 
-- CODE:
from numpy import *

mat = array(eval(input("")))

par = 0
impar = 0

for i in range(size(mat)):
	if mat[i] % 2 == 0:
		par += 1
	else:
		impar += 1

g1 = zeros(par, dtype = int)
g2 = zeros(impar, dtype = int)

for k in range(size(mat)):
	if mat[k] % 2 == 0:
		g1[k] = mat[k]
	else:
		g2[k] = mat[k]
		
print(g2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 18:44:40) 
-- CODE:
from numpy import *

mat = array(eval(input("")))

par = 0
impar = 0

for i in range(size(mat)):
	if mat[i] % 2 != 0:
		impar += 1

g1 = zeros(par, dtype = int)
g2 = zeros(impar, dtype = int)

for k in range(size(mat)):
	if mat[k] % 2 != 0:
		g2[k] = mat[k]
		
print(g2)
-- EXECUTION TIME:
0.965171
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2572/main.py", line 17, in <module>
    g2[k] = mat[k]
IndexError: index 3 is out of bounds for axis 0 with size 2

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:44:45) 
-- CODE:
from numpy import *

mat = array(eval(input("")))

par = 0
impar = 0

for i in range(size(mat)):
	if mat[i] % 2 != 0:
		impar += 1

g1 = zeros(par, dtype = int)
g2 = zeros(impar, dtype = int)

for k in range(size(mat)):
	if mat[k] % 2 != 0:
		g2[k] = mat[k]
		
print(g2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 18:44:53) 
-- CODE:
from numpy import *

mat = array(eval(input("")))

par = 0
impar = 0

for i in range(size(mat)):
	if mat[i] % 2 != 0:
		impar += 1

g2 = zeros(impar, dtype = int)

for k in range(size(mat)):
	if mat[k] % 2 != 0:
		g2[k] = mat[k]
		
print(g2)
-- EXECUTION TIME:
1.17334
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2572/main.py", line 16, in <module>
    g2[k] = mat[k]
IndexError: index 3 is out of bounds for axis 0 with size 2

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:45:04) 
-- CODE:
from numpy import *

mat = array(eval(input("")))

impar = 0

for i in range(size(mat)):
	if mat[i] % 2 != 0:
		impar += 1

g2 = zeros(impar, dtype = int)

for k in range(size(mat)):
	if mat[k] % 2 != 0:
		g2[k] = mat[k]

print(g2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:46:10) 
-- CODE:
from numpy import *

mat = array(eval(input("")))

impar = 0

for i in range(size(mat)):
	if mat[i] % 2 != 0:
		impar += 1

g2 = zeros(size(mat), dtype = int)

for k in range(size(mat)):
	if mat[k] % 2 != 0:
		g2[k] = mat[k]

print(g2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:47:16) 
-- CODE:
from numpy import *

mat = array(eval(input("")))

impar = 0

for i in range(size(mat)):
	if mat[i] % 2 != 0:
		impar += 1

g2 = zeros(impar, dtype = int)

for k in range(size(mat)):
	if mat[k] % 2 != 0:
		g2[k] = mat[k]

print(g2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:47:59) 
-- CODE:
from numpy import *

mat = array(eval(input("")))

impar = 0

for i in range(size(mat)):
	if mat[i] % 2 != 0:
		impar += 1

g2 = zeros(impar, dtype = int)

for k in range(size(mat)):
	for x in range(size(g2)):
		if mat[k] % 2 != 0:
			g2[x] = mat[k]

print(g2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 18:48:07) 
-- CODE:
from numpy import *

mat = array(eval(input("")))

impar = 0

for i in range(size(mat)):
	if mat[i] % 2 != 0:
		impar += 1

g2 = zeros(impar, dtype = int)

for k in range(size(mat)):
	for x in range(size(g2)):
		if mat[k] % 2 != 0:
			g2[x] = mat[k]

print(g2)
-- EXECUTION TIME:
1.0721
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[97135671 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[85794217 85794217 85794217 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:48:10) 
-- CODE:
from numpy import *

mat = array(eval(input("")))

impar = 0

for i in range(size(mat)):
	if mat[i] % 2 != 0:
		impar += 1

g2 = zeros(impar, dtype = int)

for k in range(size(mat)):
	for x in range(size(g2)):
		if mat[k] % 2 != 0:
			g2[x] = mat[k]

print(g2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 18:48:14) 
-- CODE:
from numpy import *

mat = array(eval(input("")))

impar = 0

for i in range(size(mat)):
	if mat[i] % 2 != 0:
		impar += 1

g2 = zeros(impar, dtype = int)

for k in range(size(mat)):
	for x in range(size(g2)):
		if mat[k] % 2 != 0:
			g2[x] = mat[k]

print(g2)
-- EXECUTION TIME:
1.57259
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[97135671 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[85794217 85794217 85794217 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:48:38) 
-- CODE:
from numpy import *

mat = array(eval(input("")))

impar = 0

for i in range(size(mat)):
	if mat[i] % 2 != 0:
		impar += 1

g2 = zeros(impar, dtype = int)

for k in range(size(mat)):
	for x in range(size(g2)):
		if mat[k] % 2 != 0:
			g2[x] = mat[k]

print(g2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 18:49:59) 
-- CODE:
from numpy import *

mat = array(eval(input("")))

impar = 0

for i in range(size(mat)):
	if mat[i] % 2 != 0:
		impar += 1

g2 = zeros(impar, dtype = int)

k = 0
x = 0

while k != size(mat):
	
	if mat[k] % 2 != 0:
	g[x] = mat[k]
	
	x += 1
	k += 1
	
print(g2)
-- EXECUTION TIME:
0.745068
-- ERROR:
  File "/home/codebench/codes/1807/2572/main.py", line 19
    g[x] = mat[k]
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:50:05) 
-- CODE:
from numpy import *

mat = array(eval(input("")))

impar = 0

for i in range(size(mat)):
	if mat[i] % 2 != 0:
		impar += 1

g2 = zeros(impar, dtype = int)

k = 0
x = 0

while k != size(mat):
	
	if mat[k] % 2 != 0:
	g[x] = mat[k]
	
	x += 1
	k += 1
	
print(g2)
-- ERROR:
File "XXXX", line 19
    g[x] = mat[k]
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 18:51:08) 
-- CODE:
from numpy import *

mat = array(eval(input("")))

impar = 0

for i in range(size(mat)):
	if mat[i] % 2 != 0:
		impar += 1

g2 = zeros(impar, dtype = int)

k = 0
x = 0

while k != size(mat):
	
	if mat[k] % 2 != 0:
	g2[x] = mat[k]
	
	x += 1
	k += 1
	
	
print(g2)
-- EXECUTION TIME:
0.727965
-- ERROR:
  File "/home/codebench/codes/1807/2572/main.py", line 19
    g2[x] = mat[k]
     ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:51:10) 
-- CODE:
from numpy import *

mat = array(eval(input("")))

impar = 0

for i in range(size(mat)):
	if mat[i] % 2 != 0:
		impar += 1

g2 = zeros(impar, dtype = int)

k = 0
x = 0

while k != size(mat):
	
	if mat[k] % 2 != 0:
	g2[x] = mat[k]
	
	x += 1
	k += 1
	
	
print(g2)
-- ERROR:
File "XXXX", line 19
    g2[x] = mat[k]
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:51:11) 
-- CODE:
from numpy import *

mat = array(eval(input("")))

impar = 0

for i in range(size(mat)):
	if mat[i] % 2 != 0:
		impar += 1

g2 = zeros(impar, dtype = int)

k = 0
x = 0

while k != size(mat):
	
	if mat[k] % 2 != 0:
	g2[x] = mat[k]
	
	x += 1
	k += 1
	
	
print(g2)
-- ERROR:
File "XXXX", line 19
    g2[x] = mat[k]
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 18:51:19) 
-- CODE:
from numpy import *

mat = array(eval(input("")))

impar = 0

for i in range(size(mat)):
	if mat[i] % 2 != 0:
		impar += 1

g2 = zeros(impar, dtype = int)

k = 0
x = 0

while k != size(mat):
	
	if mat[k] % 2 != 0:
		g2[x] = mat[k]
	
	x += 1
	k += 1
	
	
print(g2)
-- EXECUTION TIME:
1.12596
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2572/main.py", line 19, in <module>
    g2[x] = mat[k]
IndexError: index 3 is out of bounds for axis 0 with size 2

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:51:21) 
-- CODE:
from numpy import *

mat = array(eval(input("")))

impar = 0

for i in range(size(mat)):
	if mat[i] % 2 != 0:
		impar += 1

g2 = zeros(impar, dtype = int)

k = 0
x = 0

while k != size(mat):
	
	if mat[k] % 2 != 0:
		g2[x] = mat[k]
	
	x += 1
	k += 1
	
	
print(g2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 18:51:34) 
-- CODE:
from numpy import *

mat = array(eval(input("")))

impar = 0

for i in range(size(mat)):
	if mat[i] % 2 != 0:
		impar += 1

g2 = zeros(impar, dtype = int)

k = 0
x = 0

while k != size(mat):
	
	if mat[k] % 2 != 0:
		g2[x] = mat[k]
	
		x += 1
	k += 1
	
	
print(g2)
-- EXECUTION TIME:
1.05617
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 18:52:45) 
-- CODE:
from numpy import *

mat = array(eval(input("")))

par = 0
impar = 0

for i in range(size(mat)):
	if mat[i] % 2 == 0:
		par += 1
	else:
		impar += 1

g1 = zeros(par, dtype = int)
g2 = zeros(impar, dtype = int)

k = 0
x = 0

while k != size(mat):
	
	if mat[k] % 2 != 0:
		g2[x] = mat[k]
	
		x += 1
	k += 1
	
	
print(g2)
-- EXECUTION TIME:
0.908007
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:36:15) 
-- CODE:
from numpy import *

mat = array(eval(input("")))

par = 0
impar = 0

for i in range(size(mat)):
	if mat[i] % 2 != 0:
		impar += 1


g2 = zeros(impar, dtype = int)

k = 0
x = 0

for k in range(size(mat)):
	
	if mat[k] % 2 != 0:
		g2[x] = mat[k]
		
		x += 1
	k += 1
	
print(g2)
-- EXECUTION TIME:
0.950747
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:37:01) 
-- CODE:
from numpy import *

mat = array(eval(input("")))

par = 0
impar = 0

for i in range(size(mat)):
	if mat[i] % 2 != 0:
		impar += 1


g2 = zeros(impar, dtype = int)

x = 0

for k in range(size(mat)):
	
	if mat[k] % 2 != 0:
		g2[x] = mat[k]
		
		x += 1
	
	
print(g2)
-- EXECUTION TIME:
1.19511
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:37:05) 
-- CODE:
from numpy import *

mat = array(eval(input("")))

par = 0
impar = 0

for i in range(size(mat)):
	if mat[i] % 2 != 0:
		impar += 1


g2 = zeros(impar, dtype = int)



for k in range(size(mat)):
	
	if mat[k] % 2 != 0:
		g2[x] = mat[k]
		
		x += 1
	
	
print(g2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:37:08) 
-- CODE:
from numpy import *

mat = array(eval(input("")))

par = 0
impar = 0

for i in range(size(mat)):
	if mat[i] % 2 != 0:
		impar += 1


g2 = zeros(impar, dtype = int)



for k in range(size(mat)):
	
	if mat[k] % 2 != 0:
		g2[x] = mat[k]
		
		x += 1
	
	
print(g2)
-- EXECUTION TIME:
1.03994
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2572/main.py", line 20, in <module>
    g2[x] = mat[k]
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:37:11) 
-- CODE:
from numpy import *

mat = array(eval(input("")))

par = 0
impar = 0

for i in range(size(mat)):
	if mat[i] % 2 != 0:
		impar += 1


g2 = zeros(impar, dtype = int)



for k in range(size(mat)):
	
	if mat[k] % 2 != 0:
		g2[x] = mat[k]
		
		x += 1
	
	
print(g2)
-- EXECUTION TIME:
1.26703
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2572/main.py", line 20, in <module>
    g2[x] = mat[k]
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:37:19) 
-- CODE:
from numpy import *

mat = array(eval(input("")))

par = 0
impar = 0

for i in range(size(mat)):
	if mat[i] % 2 != 0:
		impar += 1


g2 = zeros(impar, dtype = int)



for k in range(size(mat)):
	
	if mat[k] % 2 != 0:
		g2[x] = mat[k]
		
		
	
	
print(g2)
-- EXECUTION TIME:
1.21488
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2572/main.py", line 20, in <module>
    g2[x] = mat[k]
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:53:57) 
-- CODE:
from numpy import *

mat = array(eval(input("")))

par = 0
impar = 0

for i in range(size(mat)):
	if mat[i] % 2 != 0:
		impar += 1


g2 = zeros(impar, dtype = int)

x = 0 

for k in range(size(mat)):
	
	if mat[k] % 2 != 0:
		g2[x] = mat[k]
		
		x += 1
	
	
print(g2)
-- EXECUTION TIME:
0.991349
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
